crates/wgso/tests/cases_invalid/directive_shader_call_validation/.expected
error: value has an offset of 4 bytes in `buffer_arg_alignment`, which is not a multiple of 256 bytes
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_alignment.wgsl:2:23
  |
2 | #init ~.compute(param=buffer_arg_alignment.field2)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: value has an offset of 4 bytes in `buffer_arg_alignment`, which is not a multiple of 256 bytes
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_alignment.wgsl:4:43
  |
4 | #draw ~.render<vertices, instances>(param=buffer_arg_alignment.field2)
  |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: value has an offset of 4 bytes in `buffer_arg_alignment`, which is not a multiple of 256 bytes
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_alignment.wgsl:3:22
  |
3 | #run ~.compute(param=buffer_arg_alignment.field2)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: duplicated parameter
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_duplicated.wgsl:2:77
  |
2 | #init ~.compute(param1=buffer_arg_duplicated, param2=buffer_arg_duplicated, param1=buffer_arg_duplicated)
  |                                                                             ^^^^^^
  |
error: duplicated parameter
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_duplicated.wgsl:4:97
  |
4 | #draw ~.render<vertices, instances>(param1=buffer_arg_duplicated, param2=buffer_arg_duplicated, param1=buffer_arg_duplicated)
  |                                                                                                 ^^^^^^
  |
error: duplicated parameter
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_duplicated.wgsl:3:76
  |
3 | #run ~.compute(param1=buffer_arg_duplicated, param2=buffer_arg_duplicated, param1=buffer_arg_duplicated)
  |                                                                            ^^^^^^
  |
error: found argument with type `i32`, expected uniform type `u32`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_invalid_type.wgsl:2:23
  |
2 | #init ~.compute(value=buffer_arg_invalid_type)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^
  |
error: found argument with type `i32`, expected uniform type `u32`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_invalid_type.wgsl:4:43
  |
4 | #draw ~.render<vertices, instances>(value=buffer_arg_invalid_type)
  |                                           ^^^^^^^^^^^^^^^^^^^^^^^
  |
error: found argument with type `i32`, expected uniform type `u32`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_invalid_type.wgsl:3:22
  |
3 | #run ~.compute(value=buffer_arg_invalid_type)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^
  |
error: found argument with type `MyStruct`, expected uniform type `MyStruct`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_invalid_type_same_name.wgsl:2:23
  |
2 | #init ~.compute(param=buffer_arg_invalid_type_same_name)
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: found argument with type `MyStruct`, expected uniform type `MyStruct`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_invalid_type_same_name.wgsl:4:43
  |
4 | #draw ~.render<vertices, instances>(param=buffer_arg_invalid_type_same_name)
  |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: found argument with type `MyStruct`, expected uniform type `MyStruct`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_invalid_type_same_name.wgsl:3:22
  |
3 | #run ~.compute(param=buffer_arg_invalid_type_same_name)
  |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
error: missing uniform argument `param`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_missing.wgsl:3:6
  |
3 | #run ~.compute()
  |      ^^^^^^^^^
  |
error: missing uniform argument `param`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_missing.wgsl:2:7
  |
2 | #init ~.compute()
  |       ^^^^^^^^^
  |
error: missing uniform argument `param`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_missing.wgsl:4:7
  |
4 | #draw ~.render<vertices, instances>()
  |       ^^^^^^^^
  |
error: no uniform variable `arg_unknown_param` in shader `~.compute`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_unknown.wgsl:3:16
  |
3 | #run ~.compute(arg_unknown_param=buffer_arg_unknown)
  |                ^^^^^^^^^^^^^^^^^
  |
error: no uniform variable `arg_unknown_param` in shader `~.compute`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_unknown.wgsl:2:17
  |
2 | #init ~.compute(arg_unknown_param=buffer_arg_unknown)
  |                 ^^^^^^^^^^^^^^^^^
  |
error: no uniform variable `arg_unknown_param` in shader `~.render`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_unknown.wgsl:4:37
  |
4 | #draw ~.render<vertices, instances>(arg_unknown_param=buffer_arg_unknown)
  |                                     ^^^^^^^^^^^^^^^^^
  |
error: unknown storage variable `arg_unknown_storage`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_unknown_storage.wgsl:3:22
  |
3 | #run ~.compute(param=arg_unknown_storage)
  |                      ^^^^^^^^^^^^^^^^^^^
  |
error: unknown storage variable `arg_unknown_storage`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_unknown_storage.wgsl:2:23
  |
2 | #init ~.compute(param=arg_unknown_storage)
  |                       ^^^^^^^^^^^^^^^^^^^
  |
error: unknown storage variable `arg_unknown_storage`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_unknown_storage.wgsl:4:43
  |
4 | #draw ~.render<vertices, instances>(param=arg_unknown_storage)
  |                                           ^^^^^^^^^^^^^^^^^^^
  |
error: unknown field for type `u32`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_unknown_storage_field.wgsl:2:30
  |
2 | #init ~.compute(param=buffer.field)
  |                              ^^^^^
  |
error: unknown field for type `u32`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_unknown_storage_field.wgsl:3:29
  |
3 | #run ~.compute(param=buffer.field)
  |                             ^^^^^
  |
error: unknown field for type `u32`
 --> ./tests/cases_invalid/directive_shader_call_validation/arg_unknown_storage_field.wgsl:4:50
  |
4 | #draw ~.render<vertices, instances>(param=buffer.field)
  |                                                  ^^^^^
  |
error: found item type `u32`, expected `i32`
 --> ./tests/cases_invalid/directive_shader_call_validation/buffer_invalid_type.wgsl:2:16
  |
2 | #draw ~.render<vertices, instances>()
  |                ^^^^^^^^
  |
error: found item type `u32`, expected `i32`
 --> ./tests/cases_invalid/directive_shader_call_validation/buffer_invalid_type.wgsl:2:26
  |
2 | #draw ~.render<vertices, instances>()
  |                          ^^^^^^^^^
  |
error: found non-array argument
 --> ./tests/cases_invalid/directive_shader_call_validation/buffer_non_array.wgsl:2:16
  |
2 | #draw ~.render<invalid_vertices, invalid_instances>()
  |                ^^^^^^^^^^^^^^^^
  |
error: unknown storage variable `unknown`
 --> ./tests/cases_invalid/directive_shader_call_validation/buffer_unknown_storage.wgsl:2:16
  |
2 | #draw ~.render<unknown, unknown>()
  |                ^^^^^^^
  |
error: unknown storage variable `unknown`
 --> ./tests/cases_invalid/directive_shader_call_validation/buffer_unknown_storage.wgsl:2:25
  |
2 | #draw ~.render<unknown, unknown>()
  |                         ^^^^^^^
  |
error: unknown field for type `array<u32>`
 --> ./tests/cases_invalid/directive_shader_call_validation/buffer_unknown_storage_field.wgsl:2:25
  |
2 | #draw ~.render<vertices.field, instances.field>()
  |                         ^^^^^
  |
error: unknown field for type `array<u32>`
 --> ./tests/cases_invalid/directive_shader_call_validation/buffer_unknown_storage_field.wgsl:2:42
  |
2 | #draw ~.render<vertices.field, instances.field>()
  |                                          ^^^^^
  |